Bug 1851636: Don't create a new buffer if we fail to process the drop buffer event. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D187558